# gcodekit5

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGNER_MIGRATION_COMPARISON.md  DESIGNER_MIGRATION_PLAN.md  DEVELOPMENT.md  GTK4.md  PLAN.STOCKREMOVALSIM.md  PLAN.THEME.md  PLAN.TODO.md  PLAN.UNITS.md  PROPOSAL.md  README.md  RELEASE.md  REMEDIATION_PLAN.md  REVIEW.CAMTOOLS.md  REVIEW.CNCTOOLS.md  REVIEW.DEVICEMANAGER.md  REVIEW.MATERIALS.md  SLINT.md  SPEC.md  STATS.md  STEP10_COMPLETE.md  STEP9_COMPLETE.md  STEP9_COMPLETION_GUIDE.md  TESTPLAN.md  TOOLCHAIN.md  build.rs  claude_desktop_config.json  devices.json  package-lock.json  package.json  rustfmt.toml
crates/gcodekit5-camtools/: Cargo.toml
crates/gcodekit5-camtools/src/: advanced_features.rs  arc_expander.rs  drill_press.rs  error.rs  gerber.rs  hatch_test.rs  jigsaw_puzzle.rs  laser_engraver.rs  lib.rs  optimizer.rs  spoilboard_grid.rs  spoilboard_surfacing.rs  tabbed_box.rs  vector_engraver.rs
crates/gcodekit5-camtools/src/tabbed_box/: mod.rs  types.rs
crates/gcodekit5-camtools/tests/: drill_press_test.rs
crates/gcodekit5-camtools/tests/engravers/: svg_to_gcode.rs  vector_engraver_mirroring.rs  vector_engraver_multipass.rs
crates/gcodekit5-camtools/tests/processing/: tabbed_box.rs  tabbed_box_debug.rs  tabbed_box_user_bug.rs  validator.rs
crates/gcodekit5-camtools/ui/legacy/: jigsaw_puzzle_dialog.slint  laser_engraver_dialog.slint  speeds_feeds_dialog.slint  spoilboard_grid_dialog.slint  spoilboard_surfacing_dialog.slint  tabbed_box_dialog.slint  vector_engraver_dialog.slint
crates/gcodekit5-communication/: Cargo.toml
crates/gcodekit5-communication/src/: lib.rs
crates/gcodekit5-communication/src/communication/: buffered.rs  serial.rs
crates/gcodekit5-communication/src/firmware/: capabilities.rs  mod.rs  override_manager.rs  settings.rs
crates/gcodekit5-communication/tests/: test_buffered.rs  test_virtual_ports.rs
crates/gcodekit5-communication/tests/firmware/: connection_watch.rs  device_status.rs
crates/gcodekit5-core/: Cargo.toml
crates/gcodekit5-core/benches/: core_bench.rs
crates/gcodekit5-core/src/: error.rs  lib.rs  units.rs
crates/gcodekit5-core/src/core/: event.rs  listener.rs
crates/gcodekit5-core/src/data/: gtc_import.rs  materials.rs  materials_mpi_static.rs  mod.rs  tools.rs
crates/gcodekit5-core/src/event_bus/: bus.rs  events.rs  mod.rs
crates/gcodekit5-core/src/gcode/: mod.rs
crates/gcodekit5-core/src/types/: aliases.rs  mod.rs
crates/gcodekit5-core/tests/data/: materials.rs
crates/gcodekit5-core/tests/materials/: mod.rs  test_mpi_static.rs
crates/gcodekit5-designer/: Cargo.toml
crates/gcodekit5-designer/src/: arrays.rs  canvas.rs  commands.rs  designer_state.rs  drilling_patterns.rs  font_manager.rs  gcode_converter.rs  gcode_gen.rs  helpers.rs  import.rs  lib.rs  model.rs  model3d.rs  multipass.rs  ops.rs  parametric_shapes.rs  pocket_operations.rs  renderer.rs  selection_manager.rs  serialization.rs  shadow_projection.rs  shape_store.rs  shapes.rs  slice_toolpath.rs  spatial_index.rs  spatial_manager.rs  stock_removal.rs  svg_renderer.rs  templates.rs  toolpath.rs  toolpath_simulation.rs  vcarve.rs  viewport.rs
crates/gcodekit5-designer/src/canvas/: mod.rs  operations.rs  types.rs
crates/gcodekit5-designer/src/designer_state/: file_io.rs  gcode.rs  mod.rs  shapes.rs
crates/gcodekit5-designer/src/model/: circle.rs  ellipse.rs  gear.rs  line.rs  mod.rs  path.rs  polygon.rs  rectangle.rs  sprocket.rs  text.rs  triangle.rs
crates/gcodekit5-designer/src/toolpath/: generator.rs  mod.rs  segment.rs
crates/gcodekit5-designer/tests/: core.rs  default_bbox_fit.rs  designer_adaptive_integration.rs  designer_arrays_integration.rs  designer_dxf_integration.rs  designer_handle_drag_bug.rs  designer_import_integration.rs  designer_import_mirroring.rs  designer_integration.rs  designer_pan_on_drag.rs  designer_parametric_integration.rs  designer_phase3_cam_ops.rs  designer_shift_key_snapping.rs  designer_state_integration.rs  designer_templates_test.rs  designer_vcarve_integration.rs  features.rs  fit_to_view_empty.rs  fit_to_view_padding.rs  integration.rs  io.rs  lib.rs  model_verification.rs  test_3d_integration.rs
crates/gcodekit5-designer/tests/core/: canvas.rs  designer_state.rs  history.rs  render_optimizer.rs  shapes.rs  spatial_index.rs  text_toolpath.rs  toolpath.rs  viewport.rs
crates/gcodekit5-designer/tests/features/: adaptive.rs  arrays.rs  drilling_patterns.rs  multipass.rs  parametric.rs  pocket_operations.rs  templates.rs  tool_library.rs  vcarve.rs
crates/gcodekit5-designer/tests/integration/: designer_editor_integration.rs  designer_visualizer_integration.rs  toolpath_simulation.rs
crates/gcodekit5-designer/tests/io/: dxf_parser.rs  gcode_gen.rs  import.rs  serialization.rs  svg_import_integration.rs  svg_renderer.rs
crates/gcodekit5-designer/ui/legacy/: designer.slint
crates/gcodekit5-devicedb/: Cargo.toml
crates/gcodekit5-devicedb/src/: error.rs  lib.rs  manager.rs  model.rs  traits.rs  ui_integration.rs
crates/gcodekit5-devicedb/ui/legacy/: device_manager.slint
crates/gcodekit5-gcodeeditor/: Cargo.toml
crates/gcodekit5-gcodeeditor/src/: editor_bridge.rs  error.rs  lib.rs  text_buffer.rs  undo_manager.rs
crates/gcodekit5-gcodeeditor/tests/: slint_bridge_test.rs  text_buffer_test.rs
crates/gcodekit5-settings/: Cargo.toml
crates/gcodekit5-settings/src/: config.rs  controller.rs  error.rs  lib.rs  manager.rs  persistence.rs
crates/gcodekit5-settings/ui/legacy/: settings_dialog.slint
crates/gcodekit5-ui/: Cargo.toml  build.rs  ui.slint
crates/gcodekit5-ui/resources/: gresources.xml
crates/gcodekit5-ui/src/: device_status.rs  editor_bridge.rs  gtk_app.rs  helpers.rs  i18n.rs  lib.rs  platform.rs  types.rs
crates/gcodekit5-visualizer/: Cargo.toml
crates/gcodekit5-visualizer/benches/: pipeline_bench.rs
crates/gcodekit5-visualizer/src/: helpers.rs  lib.rs
crates/gcodekit5-visualizer/tests/: visualizer_coordinate_transforms.rs
docs/: DEVICES.md  (+16 more)
(+248 files in other folders)
