[workspace]
members = [
    "crates/gcodekit5-core",
    "crates/gcodekit5-communication",
    "crates/gcodekit5-camtools",
    "crates/gcodekit5-designer",
    "crates/gcodekit5-gcodeeditor",
    "crates/gcodekit5-visualizer",
    "crates/gcodekit5-settings",
    "crates/gcodekit5-devicedb",
    "crates/gcodekit5-ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["GCodeKit Contributors"]
repository = "https://github.com/thawkins/gcodekit5"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
thiserror = "2.0.17"
rfd = "0.15.4"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
raw-window-handle = "0.6"
tempfile = "3.8"

[package]
name = "gcodekit5"
version.workspace = true
edition.workspace = true
description = "A Rust-based Universal G-Code Sender for CNC machines with support for GRBL, TinyG, g2core, Smoothieware, and FluidNC controllers"
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[dependencies]
gcodekit5-core = { path = "crates/gcodekit5-core" }
gcodekit5-communication = { path = "crates/gcodekit5-communication" }
gcodekit5-camtools = { path = "crates/gcodekit5-camtools" }
gcodekit5-designer = { path = "crates/gcodekit5-designer" }
gcodekit5-gcodeeditor = { path = "crates/gcodekit5-gcodeeditor" }
gcodekit5-visualizer = { path = "crates/gcodekit5-visualizer" }
gcodekit5-settings = { path = "crates/gcodekit5-settings" }
gcodekit5-devicedb = { path = "crates/gcodekit5-devicedb" }
gcodekit5-ui = { path = "crates/gcodekit5-ui" }

tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow = "1.0"
rfd = "0.15.4"
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
windows-sys = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
raw-window-handle = "0.6"

# Build dependencies
[build-dependencies]
chrono = "0.4"

# Testing utilities
[dev-dependencies]
tempfile = "3.8"

