[package]
name = "gcodekit5-camtools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CAM (Computer-Aided Manufacturing) tools and special processing for GCodeKit4"
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
gcodekit5-core = { path = "../gcodekit5-core" }
gcodekit5-devicedb = { path = "../gcodekit5-devicedb" }

serde = { version = "1.0", features = ["derive"] }
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = { workspace = true }
regex = "1.10"
dxf = "0.6"
lyon = "1.0"
gerber-types = "0.6.0"
cavalier_contours = "0.6.0"
tracing.workspace = true
gerber_parser = "0.3.1"
serde_json.workspace = true
csgrs = "0.20.1"
nalgebra = "0.33.2"
