[package]
name = "gcodekit5-communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Communication protocols (Serial, TCP, WebSocket) for GCodeKit4"

[dependencies]
gcodekit5-core = { path = "../gcodekit5-core" }
gcodekit5-visualizer = { path = "../gcodekit5-visualizer" }
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
serialport = "4.8"
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
uuid = { workspace = true }

[dev-dependencies]
