[package]
name = "gcodekit5-devicedb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Device profile management for GCodeKit4"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }

[lib]
path = "src/lib.rs"
