[package]
name = "gcodekit5-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Slint-based user interface for GCodeKit4"

[dependencies]
gcodekit5-core = { path = "../gcodekit5-core" }
gcodekit5-communication = { path = "../gcodekit5-communication" }
gcodekit5-camtools = { path = "../gcodekit5-camtools" }
gcodekit5-designer = { path = "../gcodekit5-designer" }
gcodekit5-gcodeeditor = { path = "../gcodekit5-gcodeeditor" }
gcodekit5-visualizer = { path = "../gcodekit5-visualizer" }
gcodekit5-settings = { path = "../gcodekit5-settings" }
gcodekit5-devicedb = { path = "../gcodekit5-devicedb" }
slint = { version = "1.14.1", features = ["backend-winit", "image-default-formats"] }
gtk4 = "0.9"
libadwaita = "0.7"
sourceview5 = "0.9"
glib = "0.20"
gio = "0.20"
rfd = "0.15.4"
lyon = "1.0"
windows-sys = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

[build-dependencies]
chrono = "0.4"
slint-build = "1.14.1"

[dev-dependencies]
tempfile = "3.8"
