[package]
name = "gcodekit5-visualizer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "G-code visualization and parsing for GCodeKit4"

[dependencies]
gcodekit5-core = { path = "../gcodekit5-core" }
regex = "1.10"
thiserror = "2.0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
svg = "0.18"
dxf = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
image = "0.25"

[dev-dependencies]
